syntax = "proto3";

package user.v1;
option go_package = "github.com/iakrevetkho/archaeopteryx_example;user";

import "google/api/annotations.proto";

service UserService {
  rpc AddUser (AddUserRequest) returns (AddUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  }
}

message AddUserRequest {
  string name = 1;
  string password = 2;
}

message AddUserResponse {
  uint32 id = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  string name = 1;
  string password = 2;
}
